internal/xds/translator/testdata/out/extension-xds-ir/http-route-custom-backend.routes.yaml
- ignorePortInHostMatching: true
  name: custom-backend-listener
  virtualHosts:
  - domains:
    - '*'
    name: custom-backend-listener/*
    routes:
    - match:
        prefix: /
      name: custom-backend-route
      responseHeadersToAdd:
      - header:
          key: mock-extension-was-here
          value: "true"
      route:
        cluster: original_destination_cluster
